--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@vueuse/core": "^10.9.0",
     "@vueuse/head": "^2.0.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
+    "swiper": "7.4.1",
     "vue": "^3.4.27",
     "vue-demi": "^0.14.7",
     "vue-i18n": "^9.13.1",
