--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/head": "^2.0.0",
     "aos": "^2.3.4",
     "axios": "^1.7.2",
+    "md5": "^2.3.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "swiper": "7.4.1",
@@ -37,6 +38,7 @@
     "@shikijs/markdown-it": "^1.6.0",
     "@types/aos": "^3.0.7",
     "@types/markdown-it-link-attributes": "^3.0.5",
+    "@types/md5": "^2.3.5",
     "@types/nprogress": "^0.2.3",
     "@unocss/eslint-config": "^0.60.2",
     "@vitejs/plugin-vue": "^5.0.4",
