--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sizecheck": "npx vite-bundle-visualizer"
   },
   "dependencies": {
+    "@coloration/kit": "^1.8.0",
     "@unhead/vue": "^1.9.10",
     "@unocss/reset": "^0.60.2",
     "@vueuse/core": "^10.9.0",
